@@ -85,6 +85,11 @@
               buttonText: 'Reporting'
             },
           },
+          eventTimeFormat: {
+            hour: '2-digit',
+            minute: '2-digit',
+            hour12: false
+          },
           headerToolbar: {
             left: 'calendar_view prev,next',
             center: 'title',
